<resources>
    <string name="app_name">Ucok Point Of Sales</string>
    <string name="greeting">Welcome To Ucok POS!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_profile">Profile</string>
    <string name="action_shop">Shop</string>
    <string name="action_printer">Printer and Receipt</string>
    <string name="action_syncronize">Syncronize</string>
    <string name="action_notification">Notification</string>
    <string name="action_logout">Logout</string>
    <string name="total">Total</string>
    <string name="total_refund">Total Refund</string>
    <string name="barcode">Barcode</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="clear_transaction">Clear Transaction</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="confirm">Done</string>
    <string name="date">Date</string>
    <string name="date_added">Date Added</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_max">Quantity Maximum</string>
    <string name="remove">Remove</string>
    <string name="scan">Scan</string>
    <string name="unit_price">Unit Price</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone/WA</string>
    <string name="address">Address</string>
    <string name="id">ID</string>
    <string name="cash">Cash</string>
    <string name="transfer">Transfer Bank</string>
    <string name="change">Change</string>
    <string name="hint_search">Enter name or barcode</string>
    <string name="hint_search_customer">Enter name or email</string>
    <string name="hint_cash">Cash Received</string>
    <string name="hint_transfer">Enter transfer nominal here</string>
    <string name="hint_searching">Searching</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_stock">Add Stock</string>
    <string name="add_discount">Add Multilevel Price</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="previous">&lt;</string>
    <string name="next">></string>
    <string name="inventory">Inventory</string>
    <string name="sale">Sale</string>
    <string name="report">Report</string>
    <string name="invoice">Invoice</string>
    <string name="customer">Customer</string>
    <string name="fee">Fee</string>
    <string name="purchasing">Purchasing</string>
    <string name="pick_customer">Pick Customer</string>
    <string name="language">Language</string>
    <string name="payment">Payment</string>
    <string name="next_to_payment">Next to Payment</string>
    <string name="next_to_checkout">Next to Checkout</string>
    <string name="update">Update</string>
    <string name="favorite">Favorite</string>
    <string name="all_list">All List</string>
    <string name="transaction">Transaction</string>
    <string name="remove_invoice">Remove Invoice</string>
    <string name="remove_order">Remove Order</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="retur_invoice">Return Item</string>
    <string name="print">Print</string>
    <string name="sync_product">Syncron Product</string>
    <string name="push">Push</string>
    <string name="reload_device">Reload</string>
    <string name="dialog_quit">Are you sure you want to QUIT?</string>
    <string name="dialog_remove_product">Are you sure you want to REMOVE this product?</string>
    <string name="dialog_remove_customer">Are you sure you want to REMOVE this customer?</string>
    <string name="dialog_clear_sale">Are you sure you want to CLEAR this sale?</string>
    <string name="dialog_remove_invoice">Are you sure you want to Remove this invoice?</string>
    <string name="dialog_change_warehouse">Are you sure you want to CHANGE the Warehouse/Branch configuration?</string>
    <string name="dialog_no_payment">Are you sure you want to make a transaction without any payment?</string>
    <string name="dialog_mark_as_complete">Are you sure you want to Mark this invoice as Complete?</string>
    <string name="dialog_cancel_data">Are you sure you want to CANCEL this data?</string>
    <string name="dialog_reject_data">Are you sure you want to REJECT this data?</string>
    <string name="dialog_remove_data">Are you sure you want to REMOVE this data?</string>
    <string name="dialog_confirm_data">Are you sure you want all these data is correct?</string>
    <string name="dialog_proceed_order">Are you sure you want to PROCEED this order?</string>
    <string name="dialog_remove_order">Are you sure you want to REMOVE this order?</string>
    <string name="dialog_proceed_take_good">Are you sure you want to PROCESS taking deposit good?</string>
    <string name="hint_empty_sale">Sale is empty.</string>
    <string name="quit">Quit</string>
    <string name="no">No</string>
    <string name="product_detail">Detail</string>
    <string name="customer_detail">Detail</string>
    <string name="stock">Stock</string>
    <string name="product_discount">Multilevel Price</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="please_input_all">Please fulfill all data.</string>
    <string name="need_money">Need</string>
    <string name="customer_order">Customer Orders</string>
    <string name="invoice_detail">Detail Invoice</string>
    <string name="status">Status</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_reports">Reports</string>
    <string name="title_update_cart">Update Item</string>
    <string name="title_update_sale">Update Invoice</string>
    <string name="title_change_language">Change Language</string>
    <string name="title_share">Share</string>
    <string name="title_mark_complete">Finish This Order</string>
    <string name="title_clear_sale">Clear Current Sale</string>
    <string name="title_filter_result">Filter Result</string>
    <string name="title_proceed_retur">Proceed Retur</string>
    <string name="title_change_the_item">Change The Item</string>
    <string name="title_change_the_money">Money Back</string>
    <string name="title_change_other_item">Change Other Items</string>
    <string name="title_return_the_item">Return Item</string>
    <string name="title_refund_method">Refund Method</string>
    <string name="title_fee_report">Fee Report</string>
    <string name="title_fee_detail">Fee Detail</string>
    <string name="title_verify_payment">Verify Payment</string>
    <string name="title_stock_purchase">Stock Purchase</string>
    <string name="title_stock_in_out">Stock In/Out</string>
    <string name="title_stock_in_out_history">Stock In/Out History</string>
    <string name="title_stock_in">Stock In</string>
    <string name="title_stock_out">Stock Out</string>
    <string name="title_notification">Notification</string>
    <string name="title_stagging">Stagging Order</string>
    <string name="title_customer">Customer</string>
    <string name="dashboard_income">Income</string>
    <string name="dashboard_transaction">Transaction</string>
    <string name="dashboard_today">Today</string>
    <string name="dashboard_yesterday">Yesterday</string>
    <string name="dashboard_this_month">This Month</string>
    <string name="dashboard_previous_month">Previous Month</string>
    <string name="lang_en">English</string>
    <string name="lang_id">Bahasa Indonesia</string>
    <string name="hint_lang">Please restart the application to apply this language settings.</string>
    <string name="currency">Currency</string>
    <string name="currency_idr">IDR</string>
    <string name="currency_usd">USD</string>
    <string name="params">Parameters</string>
    <string name="params_store_name">Store Name</string>
    <string name="params_store_address">Store Address</string>
    <string name="params_store_address2">Store Address 2</string>
    <string name="params_store_phone">Store Phone</string>
    <string-array name="period">
        <item>Custom</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="title_activity_login">Sign in or create an account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Password (Repeat)</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_outlet">Outlet</string>
    <string name="action_sign_in">Log In or Register</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="action_register">Create new account?</string>
    <string name="action_have_account">Already have an account?</string>
    <string name="action_submit">Submit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_unavailable_email">This email address is already exist</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_repeat">Please repeat your password correctly</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_old_password">The old password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_empty_customer_data">Please fill the Name, Phone, and Address</string>
    <string name="error_empty_customer_name">Please fill the Customer Name</string>
    <string name="error_empty_payment_data">Please complete the payment data</string>
    <string name="error_not_enough_payment">Your payment is still less than total invoice, Please check your payment data.</string>
    <string name="error_empty_retur_reason">Please choose at least a reason for the retur</string>
    <string name="error_empty_shipping_customer_data">Please fill the Shipping Date, Name, Phone, and Address</string>
    <string name="error_empty_shipping_date">Please fill the Shipping Date</string>
    <string name="error_payment_should_be_exact">Your payment should be same as total invoice</string>
    <string name="error_payment_gograb_should_be_exact">Your GoPay or OVO payment should be more than or equal than total invoice</string>
    <string name="error_empty_take_good">Please choose at least an item</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_header_information">Please fill in this form with your login account,
        or create new account.</string>
    <string name="login_information">Ready to get the next level with technology?, Let`s Go!</string>
    <string name="change_language_information">Which language do yo prefer?</string>
    <string name="title_activity_profile">Profile</string>
    <string name="tab_profile_data">Profile Data</string>
    <string name="txt_form_requirement">Please complete the following input :</string>
    <string name="label_profile_name">Full Name :</string>
    <string name="label_profile_email">Email Address :</string>
    <string name="label_profile_phone">Telephone :</string>
    <string name="label_old_password">Old Password :</string>
    <string name="label_new_password">New Password :</string>
    <string name="label_new_password_confirm">New Password (repeat) :</string>
    <string name="label_choose_warehouse">Choose Warehouse :</string>
    <string name="message_change_warehouse">Be carefull!, change Warehouse will replace all your current product data.</string>
</resources>