<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_print"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:showAsAction="always"
        android:icon="@drawable/ic_print_white_24dp"
        android:title="@string/print_invoice"/>

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit">
    </item>

    <item
        android:id="@+id/action_remove"
        android:title="@string/remove_invoice">
    </item>

    <item
        android:id="@+id/action_retur"
        android:title="@string/retur_invoice">
    </item>

    <item
        android:id="@+id/action_push"
        android:title="@string/push"
        android:visible="false">
    </item>
</menu>