<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="10dp"
    android:paddingHorizontal="15dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/params_store_name"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/appStoreNameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/params_store_address"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/appStoreAddressBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/params_store_address"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/params_store_address2"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/appStoreAddressBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/params_store_address"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/params_store_phone"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/appStorePhoneBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/confirmButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_green"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>