<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addProductDiscount_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_price"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/costBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <requestFocus />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/quantityBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity_max"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/quantityMaxBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="number"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clearButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/btnDanger"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"/>

        <Button
            android:id="@+id/confirmButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/btnInfo"
            android:text="@string/action_submit"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"/>

    </LinearLayout>

</LinearLayout>
