<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_popupAddCustomer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_change_warehouse"
        android:layout_marginBottom="@dimen/spacing_large"
        android:padding="@dimen/spacing_middle"
        android:background="@color/alertWarning"/>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_warehouse"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/available_warehouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:ems="20"
        android:layout_marginBottom="@dimen/spacing_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_large">

        <Button
            android:id="@+id/clearButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/btnDanger"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"/>

        <Button
            android:id="@+id/confirmButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/btnInfo"
            android:text="@string/save"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

</LinearLayout>